--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 
     <section>
-        <div class="container">
+        <div class="container text-center">
             <div class="row justify-content-center">
 
                 <div class="col-8">
