add text content for How to make mummy

--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Meddling Mummy</title>
 </head>
 <body>
+    <section>How to make a Mummy</section>
+    <p>There are steps to create a mummy</p>
+    <ol>
+        <li>Insert a hook through a hole near the nose and pull out part of the brain</li>
+        <li>Make a cut on the left side of the body near the tummy</li>
+        <li>Remove all internal organs</li>
+        <li>Let the internal organs dry</li>
+        <li>Place the lungs, intestines, stomach and liver inside canopic jars</li>
+        <li>Place the heart back inside the body</li>
+        <li>Rinse inside of body with wine and spices</li>
+        <li>Cover the corpse with natron (salt) for 70 days</li>
+        <li>After 40 days stuff the body with linen or sand to give it a more human shape</li>
+        <li>After the 70 days wrap the body from head to toe in bandages</li>
+        <li>Place in a sarcophagus (a type of box like a coffin)</li>
+    </ol>
+    <p>If the person had been a Pharaoh, he would be placed inside his special burial chamber with lots of treasure!</p>
 
 </body>
 </html>
