--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
                 <div class="col-8">
                     <h2>History of Mummies</h2>
 
-                    <p>The Ancient Egyptians believed that when a person died they made a journey to the next world. They believed that in order to live in the next world their body had to be preserved. A preserved body is called a mummy. While elaborate
-                        versions of this practice were only reserved for the highest levels of Egyptian society, mummification was a cornerstone of Egyptian religion. After death a body begins to decompose. In order to prevent a body from decomposing
-                        it is necessary to deprive the tissues of moisture and oxygen. The earliest Egyptians buried their dead in shallow pits in the desert. The hot, dry sand quickly removed moisture from the dead body and created a natural mummy. However,
-                        the Egyptians discovered that if the body was first placed in a coffin, it would not be preserved. In order to ensure that the body was preserved the Ancient Egyptians began to use a process called mummification to produce their
-                        mummies. This involved embalming the body and then wrapping it in thin strips of linen.</p>
+                    <p>The first mummy to be wrapped up comes from the Chinchorro culture of South America, in the area of southern Peru and northern Chile. The oldest of these mummies was a person who died in 5050 BC, over 7,000 years ago. These Chinchorro
+                        mummies are 2,000 years older than the mummies in ancient Egypt! <br>The Ancient Egyptians believed that when a person died they made a journey to the next world. They believed that in order to live in the next world their body
+                        had to be preserved. A preserved body is called a mummy. While elaborate versions of this practice were only reserved for the highest levels of Egyptian society, mummification was a cornerstone of Egyptian religion. After death
+                        a body begins to decompose. In order to prevent a body from decomposing it is necessary to deprive the tissues of moisture and oxygen. The earliest Egyptians buried their dead in shallow pits in the desert. The hot, dry sand quickly
+                        removed moisture from the dead body and created a natural mummy. However, the Egyptians discovered that if the body was first placed in a coffin, it would not be preserved. In order to ensure that the body was preserved the Ancient
+                        Egyptians began to use a process called mummification to produce their mummies. This involved embalming the body and then wrapping it in thin strips of linen.</p>
 
                 </div>
             </div>
