--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
 <html lang="en">
 
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
 
 <body>
 
-	<!-- Intro / Landing -->
-	<h1>Egyptian Mummies</h1>
-	<img src="https://d3jkudlc7u70kh.cloudfront.net/weird-mummy-facts.jpg" alt="an image of a sarcophagus">
-	<p>The methods of embalming, or treating the dead body, that the ancient Egyptians used is called mummification.
-		Using special processes, the Egyptians removed all moisture from the body, leaving only a dried form that would
-		not easily decay. It was important in their religion to preserve the dead body in as life-like a manner as
-		possible. So successful were they that today we can view the mummified body of an Egyptian and have a good idea
-		of what he or she looked like in life, 3000 years ago.
-	</p>
-	<!-- /Intro / Landing -->
-  
+    <!-- Intro / Landing -->
+    <h1>Egyptian Mummies</h1>
+    <img src="https://d3jkudlc7u70kh.cloudfront.net/weird-mummy-facts.jpg" alt="an image of a sarcophagus">
+    <p>The methods of embalming, or treating the dead body, that the ancient Egyptians used is called mummification. Using special processes, the Egyptians removed all moisture from the body, leaving only a dried form that would not easily decay. It was
+        important in their religion to preserve the dead body in as life-like a manner as possible. So successful were they that today we can view the mummified body of an Egyptian and have a good idea of what he or she looked like in life, 3000 years
+        ago.
+    </p>
+    <!-- /Intro / Landing -->
+
+
+
+    <!-- history page -->
     <section>
         <div class="container text-center">
             <div class="row justify-content-center">
