--- a/index.html
+++ b/index.html
@@ -11,33 +11,47 @@
 <body>
 
 	<!-- Intro / Landing -->
-	<h1>Egyptian Mummies</h1>
-	<img src="https://d3jkudlc7u70kh.cloudfront.net/weird-mummy-facts.jpg" alt="an image of a sarcophagus">
-	<p>The methods of embalming, or treating the dead body, that the ancient Egyptians used is called mummification.
-		Using special processes, the Egyptians removed all moisture from the body, leaving only a dried form that would
-		not easily decay. It was important in their religion to preserve the dead body in as life-like a manner as
-		possible. So successful were they that today we can view the mummified body of an Egyptian and have a good idea
-		of what he or she looked like in life, 3000 years ago.
-	</p>
+	<section>
+		<h1>Egyptian Mummies</h1>
+		<img src="https://d3jkudlc7u70kh.cloudfront.net/weird-mummy-facts.jpg" alt="an image of a sarcophagus">
+		<p>The methods of embalming, or treating the dead body, that the ancient Egyptians used is called mummification.
+			Using special processes, the Egyptians removed all moisture from the body, leaving only a dried form that
+			would
+			not easily decay. It was important in their religion to preserve the dead body in as life-like a manner as
+			possible. So successful were they that today we can view the mummified body of an Egyptian and have a good
+			idea
+			of what he or she looked like in life, 3000 years ago.
+		</p>
+	</section>
 	<!-- /Intro / Landing -->
-  
-    <section>
-        <div class="container text-center">
-            <div class="row justify-content-center">
 
-                <div class="col-8">
-                    <h2>History of Mummies</h2>
-                    <h3>Background</h3>
-                    <p>The Ancient Egyptians believed that when a person died they made a journey to the next world. They believed that in order to live in the next world their body had to be preserved. A preserved body is called a mummy. While elaborate
-                        versions of this practice were only reserved for the highest levels of Egyptian society, mummification was a cornerstone of Egyptian religion. After death a body begins to decompose. In order to prevent a body from decomposing
-                        it is necessary to deprive the tissues of moisture and oxygen. The earliest Egyptians buried their dead in shallow pits in the desert. The hot, dry sand quickly removed moisture from the dead body and created a natural mummy. However,
-                        the Egyptians discovered that if the body was first placed in a coffin, it would not be preserved. In order to ensure that the body was preserved the Ancient Egyptians began to use a process called mummification to produce their
-                        mummies. This involved embalming the body and then wrapping it in thin strips of linen.</p>
+    <!-- history of mummies -->
+	<section>
+		<div class="container text-center">
+			<div class="row justify-content-center">
 
-                </div>
-            </div>
-        </div>
-    </section>
+				<div class="col-8">
+					<h2>History of Mummies</h2>
+					<h3>Background</h3>
+					<p>The Ancient Egyptians believed that when a person died they made a journey to the next world.
+						They believed that in order to live in the next world their body had to be preserved. A
+						preserved body is called a mummy. While elaborate
+						versions of this practice were only reserved for the highest levels of Egyptian society,
+						mummification was a cornerstone of Egyptian religion. After death a body begins to decompose. In
+						order to prevent a body from decomposing
+						it is necessary to deprive the tissues of moisture and oxygen. The earliest Egyptians buried
+						their dead in shallow pits in the desert. The hot, dry sand quickly removed moisture from the
+						dead body and created a natural mummy. However,
+						the Egyptians discovered that if the body was first placed in a coffin, it would not be
+						preserved. In order to ensure that the body was preserved the Ancient Egyptians began to use a
+						process called mummification to produce their
+						mummies. This involved embalming the body and then wrapping it in thin strips of linen.</p>
+
+				</div>
+			</div>
+		</div>
+	</section>
+<!-- /history -->
 
 </body>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
