add image to how to make section

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
                         <li>Place in a sarcophagus (a type of box like a coffin)</li>
                     </ol>
                     <p>If the person had been a Pharaoh, he would be placed inside his special burial chamber with lots of treasure!</p>
+                    <img src="https://animosbones.files.wordpress.com/2018/01/em1.jpg" alt="vintage embalming tools" height="400" width="420">
                 </div>
             </div>
         </div>
