--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 <h2>5. The Mummy's Tomb (1942)</h2>
-<img src="images_movies/img5.jpg" class="img-fluid" alt="Responsive image">
+<img src="images_movies/img5.jpg" class="img-fluid" alt="The Mummy's Tomb (1942)">
 <h3>Director: Harold Young</h3>
 <p>The Mummy’s Tomb is a direct sequel to The Mummy’s Hand with the same group of heroes (although Wallace Ford’s
 	character is now call Babe Hanson instead of Babe Jenson) returning for a rematch with Kharis. This Universal Mummy
@@ -106,7 +106,7 @@
 	play Dracula (well, the Son of Dracula), Frankenstein’s Monster, the Wolf Man, and the Mummy for the studio.</p>
 
 <h2>4. The Mummy (1999)</h2>
-<img src="images_movies/img4.jpg" class="img-fluid" alt="Responsive image">
+<img src="images_movies/img4.jpg" class="img-fluid" alt="The Mummy (1999)">
 <h3>Director: Stephen Sommers</h3>
 <p>1999’s remake in name only of Universal’s original Mummy has one of the most fascinating production stories in the
 	history of monster films. When Universal first decided to remake The Mummy, they turned to Clive Barker who
@@ -117,28 +117,22 @@
 
 
 <h2>3. The Mummy (1959)</h2>
-<img src="images_movies/img3.jpg" class="img-fluid" alt="Responsive image">
+<img src="images_movies/img3.jpg" class="img-fluid" alt="The Mummy (1959)">
 <h3>Director: Terrence Fisher</h3>
 <p>Moody as hell, Hammer’s first Mummy film returned the monster to greatness after the Universal Mummy cycle fell in
 	quality during the Chaney pictures. This film stars Christopher Lee as the Mummy (Hammer resurrected the name Kharis
 	for their opening Mummy salvo) and Peter Cushing as his adversary, John Banning.</p>
 
 <h2>2. Bubba Ho-Tep (2003)</h2>
-<img src="images_movies/img2.jpg" class="img-fluid" alt="Responsive image">
+<img src="images_movies/img2.jpg" class="img-fluid" alt="Bubba Ho-Tep (2003)">
 <h3>Director: Don Coscarelli</h3>
 <p>The most original, strangest, and oddly endearing mummy film ever made, 2003’s Bubba Ho-Tep starred the man himself
 	Bruce Campbell as an (get ready for this) aged Elvis Presley who faked his own death and now lives in an East Texas
 	rest home. Elvis must defend his home and fellow elderly housemates from a soul-sucking mummy, whom Elvis dubs Bubba
 	Ho-Tep.</p>
 
-
-<h3>Director: Don Coscarelli</h3>
-<p>The most original, strangest, and oddly endearing mummy film ever made, 2003’s Bubba Ho-Tep starred the man himself
-	Bruce Campbell as an (get ready for this) aged Elvis Presley who faked his own death and now lives in an East Texas
-	rest home. Elvis must defend his home and fellow elderly housemates from a soul-sucking mummy, whom Elvis dubs Bubba
-	Ho-Tep.</p>
 <h2>1. The Mummy (1932)</h2>
-<img src="images_movies/mummykarloff.jpg" class="img-fluid" alt="Responsive image">
+<img src="images_movies/mummykarloff.jpg" class="img-fluid" alt="The Mummy (1932)">
 <h3>Director: Karl Freund</h3>
 <p>This mummy, the original mummy, was a tragic monster in the same vein as Frankenstein and unlike most mummies that
 	came after, Karloff’s Imhotep was no mindless beast. No, Imhotep was a magic user and a thinker, an immortal
