--- a/index.html
+++ b/index.html
@@ -123,5 +123,6 @@
         a precious few minutes where Karloff wore the wrappings that inspired almost a century of nightmares.</p>
 
 </body>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
 </html>
