--- a/index.html
+++ b/index.html
@@ -7,10 +7,37 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<title>Meddling Mummy</title>
+     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="style/style.css" type="text/css" />
 
 </head>
 
 <body>
+	<header>
+		<div class="container-fluid">
+			<div class="container text-center ">
+				<div class="row">
+					<div class="col-xl-12">
+						<h1>Spooky Ghosts and Ghouls</h1>
+					</div>
+					<div class="col-xl-12 col-lg-12 col-md-12">
+						<h2>Meddling Mummy</h2>
+					</div>
+
+
+				</div>
+			</div>
+			<div class="nav d-flex justify-content-center">
+				<a href="" class="navMenu ">History</a>
+				<a href="" class="navMenu">Fun facts</a>
+				<a href="" class="navMenu">Movies</a>
+				<a href="" class="navMenu">Jokes</a>
+				<a href="" class="navMenu">Wrap it!</a>
+			</div>
+		</div>
+
+	</header>
 	<section>
 		<div class="container text-center">
 			<div class="row justify-content-center">
@@ -165,7 +192,46 @@
 	</section>
 	<!-- Movies -->
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+	<footer>
+		<div class="container-fluid">
+			<div class="container">
+				<div class="row">
+					<div class="col-xl-4">Team 5</div>
+					<div class="row footerFont">
+						<div class="col">Chris O'Connor</div>
+						<p>Aleksander Voronini</p>
+						<div class="col">Kevin</div>
+						<div class="col">Madis</div>
+						<div class="col">Jose Enciso</div>
+						<div class="col">May</div>
+						<div class="col">Nick Britz</div>
+						<div class="col">Tracy Jhonson</div>
+						<div class="col">Deanna Castano</div>
+					</div>
+				</div>
+			</div>
+	<footer>
+        <div class="container-fluid">
+            <div class="container">
+            <div class="row">
+                <div class="col-xl-4">Team 5</div>
+                <div class="row footerFont">
+                    <div class="col">Chris O'Connor</div>
+                    <p>Aleksander Voronini</p>
+                    <div class="col">Kevin</div>
+                    <div class="col">Madis</div>
+                    <div class="col">Jose Enciso</div>
+                    <div class="col">May</div>
+                    <div class="col">Nick Britz</div>
+                    <div class="col">Tracy Jhonson</div>
+                    <div class="col">Deanna Castano</div>
+                </div>
+            </div>
+        </div>
+    </footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
