--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<div class="container text-center ">
 				<div class="row">
 					<div class="col-xl-12">
-						<h1>Spooky Ghosts and Ghouls</h1>
+						<h1 class="header">Spooky Ghosts and Ghouls</h1>
 					</div>
 					<div class="col-xl-12 col-lg-12 col-md-12">
 						<h2>Meddling Mummy</h2>
